--- a/Index.html
+++ b/Index.html
@@ -6,7 +6,8 @@ WEB DEVELOPMENT
 </title>
 </head>
 <body>
-<h2>This is a HTML file </h2>
-<a href="resume.html">MY BIO</a>
+<h2>This is a HTML file </h2><br><br>
+<a href="resume.html">MY BIO</a><br><br>
+<a href="story.html">story task</a><br><br>  
 </body>
 </html>
