--- a/Index.html
+++ b/Index.html
@@ -9,5 +9,6 @@ WEB DEVELOPMENT
 <h2>This is a HTML file </h2><br><br>
 <a href="resume.html">MY BIO</a><br><br>
 <a href="story.html">story task</a><br><br>  
+<a href="layout.html">Google layout</a><br><br>   
 </body>
 </html>
